build: tag entity in post